// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > with 2 to 5 pages > should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  margin-right: 12px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.circuit-2 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.circuit-3 {
  min-width: 34px;
  padding: 4px;
  margin-right: 4px;
}

li:last-child .circuit-3 {
  margin-right: 0;
}

.circuit-8 {
  margin-left: 12px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<nav
  aria-label="Pagination"
  class="circuit-0"
  role="navigation"
>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 _kilo_f6dd9a circuit-1"
    disabled=""
    title="Previous"
  >
    <span
      class="_base_2b3edd _byte_2b3edd _spinner_892426"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 8c0-.266.104-.52.29-.71l4-4c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L7.42 8l3.29 3.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 5 8z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Previous
      </span>
    </span>
  </button>
  <ol
    class="circuit-2"
    role="list"
  >
    <li>
      <button
        aria-current="true"
        aria-label="Go to page 1"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _primary_892426 circuit-3"
        title="Go to page 1"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        aria-current="false"
        aria-label="Go to page 2"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-3"
        title="Go to page 2"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        aria-current="false"
        aria-label="Go to page 3"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-3"
        title="Go to page 3"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <button
        aria-current="false"
        aria-label="Go to page 4"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-3"
        title="Go to page 4"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          4
        </span>
      </button>
    </li>
    <li>
      <button
        aria-current="false"
        aria-label="Go to page 5"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-3"
        title="Go to page 5"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          5
        </span>
      </button>
    </li>
  </ol>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 _kilo_f6dd9a circuit-8"
    title="Next"
  >
    <span
      class="_base_2b3edd _byte_2b3edd _spinner_892426"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Next
      </span>
    </span>
  </button>
</nav>
`;

exports[`Pagination > with more than 5 pages > should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  margin-right: 12px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.circuit-2 {
  margin-left: 12px;
}

.circuit-3 {
  margin-left: 12px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<nav
  aria-label="Pagination"
  class="circuit-0"
  role="navigation"
>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 _kilo_f6dd9a circuit-1"
    disabled=""
    title="Previous"
  >
    <span
      class="_base_2b3edd _byte_2b3edd _spinner_892426"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 8c0-.266.104-.52.29-.71l4-4c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L7.42 8l3.29 3.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 5 8z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Previous
      </span>
    </span>
  </button>
  <div
    class="_wrapper_7cd753"
  >
    <label
      class="_label_7cd753"
      for=":r0:"
    >
      <span
        class="_label-text_7cd753 _hide-visually_73b4bb"
      >
        Pagination
      </span>
    </label>
    <div
      class="_wrapper_183935"
    >
      <select
        aria-describedby=":r1:"
        class="_base_183935"
        id=":r0:"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="5"
        >
          5
        </option>
        <option
          value="6"
        >
          6
        </option>
        <option
          value="7"
        >
          7
        </option>
        <option
          value="8"
        >
          8
        </option>
        <option
          value="9"
        >
          9
        </option>
        <option
          value="10"
        >
          10
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="_icon_183935"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
  <span
    class="circuit-2"
  >
    of 10
  </span>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 _kilo_f6dd9a circuit-3"
    title="Next"
  >
    <span
      class="_base_2b3edd _byte_2b3edd _spinner_892426"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Next
      </span>
    </span>
  </button>
</nav>
`;
